--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PixelPerfect</title>
+  <title>ResizeMate</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>PixelPerfect</h1>
+  <h1>ResizeMate</h1>
 
   <div class="form-container">
     <!-- Image Input -->
