Added feature : Live Image Preview (Before Resize)

--- a/popup.html
+++ b/popup.html
@@ -70,6 +70,10 @@
 
     <!-- Upload Message -->
     <p id="uploadMessage" class="hidden" aria-live="polite"></p>
+
+    <!-- Preview Image -->
+    <img id="imagePreview" class="hidden" alt="Image preview" />
+
   </div>
 
   <!-- Canvas + Download Link (Hidden) -->
