Added feature : view resized images

--- a/popup.html
+++ b/popup.html
@@ -81,5 +81,7 @@
   <a id="downloadLink" hidden>Download</a>
 
   <script src="popup.js"></script>
+  
+  <img id="resizedPreview" class="hidden" alt="Resized Preview" style="margin-top: 15px; max-width: 100%; border-radius: 8px;" />
 </body>
 </html>
