--- a/popup.html
+++ b/popup.html
@@ -16,9 +16,9 @@
     </div>
 
     <!-- Reference Link -->
-    <a href="/2024-social-media-image-sizes-reference.png" target="_blank" class="reference-link">
-      Preset size reference
-    </a>
+  <a href="/resize-reference-guide.png" target="_blank" class="reference-link">
+    Preset size reference
+  </a>
 
     <!-- Preset Platform Selection -->
     <select id="presetDimensions" aria-label="Platform Preset">
